syntax = "proto3";

package api.public.v1;

option go_package = "github.com/sober-studio/bubble-boot-go-kratos/api/public/v1;v1";
option java_multiple_files = true;
option java_package = "api.public.v1";

import "validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "openapi/v3/annotations.proto";

service Public {
	// 获取图形验证码
	rpc GetCaptcha (GetCaptchaRequest) returns (GetCaptchaReply) {
		option (google.api.http) = {
			get: "/public/captcha"
		};
		option(openapi.v3.operation) = {
			summary: "获取图形验证码"
		};
	}

	// 获取短信验证码
	rpc SendSmsCode (SendSmsCodeRequest) returns (SendSmsCodeReply) {
		option (google.api.http) = {
			post: "/public/sms-code"
			body: "*"
		};
		option(openapi.v3.operation) = {
			summary: "获取短信验证码"
		};
	}
}

// ========== 获取图形验证码 ==========
message GetCaptchaRequest {
}

message GetCaptchaReply {
	// 验证码ID
	string captcha_id = 1 [ json_name = "captcha_id",	(openapi.v3.property) = { description: "验证码id" }];
	// Base64编码的图片
	string image_b64 = 2 [ json_name = "image_b64",	(openapi.v3.property) = { description: "验证码内容" }];
}

// ========== 发送短信验证码 ==========
// 短信验证码场景
enum SmsCodeScene {
	// 未指定（默认值，不应使用）
	UNSPECIFIED = 0;
	// 登录
	LOGIN = 1;
	// 注册
	REGISTER = 2;
	// 忘记密码
	FORGET = 3;
	// 绑定
	BIND = 4;
}

message SendSmsCodeRequest {
	// 手机号，规则：11位数字
	string mobile = 1 [
		json_name = "mobile",
		(openapi.v3.property) = { description: "手机号，11位数字" },
		(validate.rules).string = {pattern: "^1[3-9]\\d{9}$"},
		(google.api.field_behavior) = REQUIRED
	];
	// 图形验证码ID
	string captcha_id = 2 [
		json_name = "captcha_id",
		(openapi.v3.property) = { description: "图形验证码ID" },
		(google.api.field_behavior) = REQUIRED
	];
	// 图形验证码
	string captcha = 3 [
		json_name = "captcha",
		(openapi.v3.property) = { description: "图形验证码内容" },
		(google.api.field_behavior) = REQUIRED
	];
	// 验证码场景
	SmsCodeScene scene = 4 [
		json_name = "scene",
		(openapi.v3.property) = { description: "短信验证码业务场景" },
		(validate.rules).enum = {defined_only: true, not_in: [0]},
		(google.api.field_behavior) = REQUIRED
	];
}

message SendSmsCodeReply {
	// 验证码过期时间戳（秒）
	int64 expire_at = 1 [
		json_name = "expire_at",
		(openapi.v3.property) = { description: "验证码过期时间戳，单位秒" }
	];
}